ビュー修正 グループ画面
・グループ画面内のボタンの色を修正
・グループへ参加する画面にborderを設置

・グループコントローラのエラー対応を実施

--- a/app/assets/stylesheets/mixin/_mixes.scss
+++ b/app/assets/stylesheets/mixin/_mixes.scss
@@ -17,4 +17,17 @@
   }
 }
 
+@mixin anim-bordercolor-change-3sred{
+  animation: bordercolor-change 3s linear infinite;
+}
+@keyframes bordercolor-change {
+  0%,100%{
+    border-color: black;
+  }
+
+  50%{
+    border-color:$mainEmRed;
+  }
+}
+
 
