メールへのリンク、電話へのリンク、会社名での再検索機能の実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "modules/card_searchnormalform";
 @import "modules/episode_show";
 @import "modules/card_newcamerasearchcamera";
+@import "modules/card_searchcompany";
 @import "modules/group_new";
 @import "modules/btnrad";
 @import "modules/notification";
