--- a/app/views/partial/_header.html.haml
+++ b/app/views/partial/_header.html.haml
@@ -14,4 +14,4 @@
     -else
       ログインしていません
       = link_to 'ログインする',new_user_session_path,class:"partial__header__right--logout btnrad btnrad--white"
-    =link_to 'このアプリの使い方',"#"
+    =link_to 'このアプリの使い方',"https://github.com/rooreckless/NameCardOCR#user-content-6使い方と全機能", target: :_blank,class: "linkWhite"
