--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -1,55 +1,25 @@
 = render 'partial/header'
-.cardindex_outer
-  .cardindex_body
-    .cardindex_body__form
-      = form_with id:"#",local: true do |f|
-        #{current_user.nickname} さんが登録した名刺の一覧です。 (全 #{@cards.length} 件)
-        .cardindex_body__form__header
-          = f.text_field :cardiid,class: "cardindex_body__form--cardid",value: "",readonly: true
-          = f.text_field :cardname,class: "cardindex_body__form--cardname",value: "名前",readonly: true
-          = f.text_field :cardcompany,class: "cardindex_body__form--cardcompany",value: "会社名",readonly: true
-          = f.text_field :carddepartment,class: "cardindex_body__form--carddepartment",value: "部署名",readonly: true
-          = f.text_field :cardaddress,class: "cardindex_body__form--cardaddress",value: "住所",readonly: true
-          = f.text_field :cardtel,class: "cardindex_body__form--cardtel",value: "TEL",readonly: true
-          = f.text_field :cardmail,class: "cardindex_body__form--cardmail",value: "mail",readonly: true
-          %hr
-        .cardindex_body__form__body
-          - @cards.each do |card|
-            .cardindex_body__form__body__more
-              = f.text_field :cardiid,class: "cardindex_body__form--cardid",value: card.id,readonly: true
-              = f.text_field :cardname,class: "cardindex_body__form--cardname",value: card.name,readonly: true
-              = f.text_field :cardcompany,class: "cardindex_body__form--cardcompany",value: card.company,readonly: true
-              = f.text_field :carddepartment,class: "cardindex_body__form--carddepartment",value: card.department,readonly: true
-              = f.text_field :cardaddress,class: "cardindex_body__form--cardaddress",value: card.address,readonly: true
-              = f.text_field :cardtel,class: "cardindex_body__form--cardtel",value: card.tel,readonly: true
-              = f.text_field :cardmail,class: "cardindex_body__form--cardmail",value: card.email,readonly: true
-              = link_to '詳細', "/cards/#{card.id}", method: :get,class:"btnrad btnrad--blue"
-            %hr
-    -if current_user.group != nil
-      %hr
-      .cardindex_body__groupform
-        = form_with id:"#",local: true do |f|
-          #{current_user.nickname} さんが所属しているグループ #{@groupname}で登録した名刺の一覧です。 (全 #{@cards_inGroup.length} 件)
-          .cardindex_body__groupform__header
-            = f.text_field :cardiid,class: "cardindex_body__groupform--cardid",value: "",readonly: true
-            = f.text_field :cardname,class: "cardindex_body__groupform--cardname",value: "名前",readonly: true
-            = f.text_field :cardcompany,class: "cardindex_body__groupform--cardcompany",value: "会社名",readonly: true
-            = f.text_field :carddepartment,class: "cardindex_body__groupform--carddepartment",value: "部署名",readonly: true
-            = f.text_field :cardaddress,class: "cardindex_body__groupform--cardaddress",value: "住所",readonly: true
-            = f.text_field :cardtel,class: "cardindex_body__groupform--cardtel",value: "TEL",readonly: true
-            = f.text_field :cardmail,class: "cardindex_body__groupform--cardmail",value: "mail",readonly: true
-          %hr
-          .cardindex_body__groupform__body
-            - @cards_inGroup.each do |card|
-              .cardindex_body__groupform__body__more
-                = f.text_field :cardiid,class: "cardindex_body__groupform--cardid",value: card.id,readonly: true
-                = f.text_field :cardname,class: "cardindex_body__groupform--cardname",value: card.name,readonly: true
-                = f.text_field :cardcompany,class: "cardindex_body__groupform--cardcompany",value: card.company,readonly: true
-                = f.text_field :carddepartment,class: "cardindex_body__groupform--carddepartment",value: card.department,readonly: true
-                = f.text_field :cardaddress,class: "cardindex_body__groupform--cardaddress",value: card.address,readonly: true
-                = f.text_field :cardtel,class: "cardindex_body__groupform--cardtel",value: card.tel,readonly: true
-                = f.text_field :cardmail,class: "cardindex_body__groupform--cardmail",value: card.email,readonly: true
-                = link_to '詳細', "/cards/#{card.id}", method: :get,class:"btnrad btnrad--blue"
-              %hr
-      %hr
+= render 'layouts/notifications'
+.searchcompany-outer
+  .searchcompany-inner
+    .searchcompany-inner__results
+      -if ((@cards_inGroup.length > 0)||(@cards_inUser.length > 0))
+        .searchcompany-inner__results__row
+          =text_field_tag "No","",readonly: true,class:"searchcompany-inner__results__row--number"
+          =text_field_tag "name","名前",readonly: true,class:"searchcompany-inner__results__row--name"
+          =text_field_tag "company","会社名",readonly: true,class:"searchcompany-inner__results__row--company"
+          =text_field_tag "department","部署名",readonly: true,class:"searchcompany-inner__results__row--deparment"
+          =text_field_tag "address","住所",readonly: true,class:"searchcompany-inner__results__row--address"
+          =text_field_tag "tel","TEL",readonly: true,class:"searchcompany-inner__results__row--tel"
+          =text_field_tag "email","mail",readonly: true,class:"searchcompany-inner__results__row--email"
+        -if @cards_inGroup.length > 0
+          .searchcompany-inner__results--Group
+            #{current_user.nickname} さんが所属しているグループ #{@groupname}で登録した名刺の一覧です。 (全 #{@cards_inGroup.length} 件)
+            -@cards_inGroup.each_with_index do |card,index|
+              =render partial: "searchcardresults",locals:{card: card,index: index}
+        -if @cards_inUser.length > 0
+          .searchcompany-inner__results--User
+            #{current_user.nickname} さんが個人として登録した名刺の一覧です。 (全 #{@cards_inUser.length} 件)
+            -@cards_inUser.each_with_index do |card,index|
+              =render partial: "searchcardresults",locals:{card: card,index: index}
 = render 'partial/footer'
