--- a/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
+++ b/app/assets/stylesheets/modules/_card_newcamerasearchcamera.scss
@@ -44,6 +44,7 @@
       }
       &--label{
         width:400px;
+        font-weight: bold;
       }
       input[type="text"]{
         width:100%;
