--- a/app/assets/stylesheets/modules/_btnrad.scss
+++ b/app/assets/stylesheets/modules/_btnrad.scss
@@ -39,6 +39,7 @@ input[type="submit"].btnrad{
   margin-left:10px;
   border:1px solid;
   border-radius: 5px;
+  background-color:$mainWhite;
   &--anim{
     @include anim-color-change-3sred;
   }
