--- a/app/views/cards/searchcamera.html.haml
+++ b/app/views/cards/searchcamera.html.haml
@@ -37,7 +37,7 @@
         .searchcamera__step3
           %hr.drawCanvas__after/
           %p.drawCanvas__after 検索結果を表示します。詳細を確認したい名刺を選択してください。
-          .searchresults.drawCanvas__after
+          .searchresults.drawCanvas__after#searchresults
   = render 'partial/footer'
   = javascript_include_tag 'specific/searchcamera'
   / 上の書き方ではこのビューで読み込むjsファイルを指定しています。application.jsではcommonディレクトリの内容はすでに読み込んでますが、このビューだけの追加で読み込むjsの指定です。
